default/objects/LongForm_Property__c/LongForm_Property__c.object-meta.xml
<CustomObject>
    <label>LongForm Property</label>
    <nameField>
        <label>LongForm Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>