default/objects/LongForm_Property__c/fields/LongForm_Tariff__c.field-meta.xml
<CustomField>
    <fullName>LongForm_Tariff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LongForm Tariff</label>
    <referenceTo>LongForm_Tariff__c</referenceTo>
    <relationshipLabel>LongForm Properties</relationshipLabel>
    <relationshipName>LongForm_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>