default/objects/LongForm_Property__c/fields/Popup__c.field-meta.xml
<CustomField>
    <fullName>Popup__c</fullName>
    <label>Popup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>